--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-body {
-    background-color: #f2f2f2;
+body html {
+    background-color: #fff;
     font-weight: 300;
     font-size: 16px;
     color: #333;
@@ -58,30 +58,22 @@ hr {
 /*
 */
 
-#headerwrap {
+.top-wrapper {
+    padding: 240px 0 240px 0;
     background: url(../img/header-bg.png) no-repeat center top;
-    margin-top: -10px;
-    padding-top: 20px;
-    text-align: center;
-    background-attachment: relative;
-    background-position: center center;
-    min-height: 700px;
-    width: 100%;
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
+    color: white;
+    text-align: center;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-#headerwrap h1 {
-    margin-top: 150px;
-    color: #1a1a1a;
-    font-size: 70px;
-    font-weight: 700;
+.top-wrapper h1 {
+    opacity: 0.7;
+    font-size: 45px;
+    letter-spacing: 5px;
 }
 
 @media screen and (max-width: 480px) {
@@ -90,57 +82,99 @@ hr {
     }
 }
 
-#headerwrap h3 {
-    color: #1a1a1a;
-    font-size: 30px;
-    font-weight: 100;
+header {
+    height: 55px;
+    width: 100%;
+    background-color: rgba(7, 19, 22, 0.5);
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
-#headerwrap .logo {
-    text-align: left;
-    margin-left: 20px;
-    margin-top: 15px;
+header .header-link {
+    max-width: 1170px;
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
-#nav {
+header .header-link .header-right {
+    float: right;
+    margin-right: -25px;
+}
+
+.header-link a {
+    line-height: 55px;
+    padding: 0 25px;
+    color: white;
+    display: block;
+    float: left;
+    transition: all 0.5s;
+}
+
+.header-link a:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.header-name {
+    text-align: center;
+    padding: 0;
+    border-radius: 0;
+    font-size: 1.8em;
+    font-weight: 900;
+}
+
+.header-name h1 {
+    position: relative;
+    display: block;
+    color: #eee;
+    transition: 0.6s ease;
+    text-decoration: none;
+}
+
+.header-name h1 span {
+    position: relative;
+    z-index: 2;
+}
+
+.header-name h1::before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    height: 72px;
+    z-index: 1;
+    display: block;
     width: 100%;
-    max-width: 630px;
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    padding: 0 15px;
-    color: white;
+    height: 100%;
+    background: #eee;
+    opacity: 0;
+    transition: 0.4s ease;
+    transform: scale(0, 1);
+    transform-origin: center left;
 }
 
-#nav h1 {
-    font-size: 20px;
-    letter-spacing: 1.5px;
-    font-weight: 600;
+.header-name h1:hover::before {
+    opacity: 1 !important;
+    transform: scale(1, 1) !important;
 }
 
-#nav a {
-    color: white;
-    font-size: 15px;
-    margin-left: 20px;
-    text-decoration: none;
-    font-weight: 600;
-    letter-spacing: 0.5px;
+.header-name-color h1:hover {
+    color: #333 !important;
 }
 
-nav {
-    margin-left: auto;
+.header-name-color h1 {
+    padding: 10px 30px !important;
+    vertical-align: middle !important;
+}
+
+.header-name-color h1 span {
+    vertical-align: middle !important;
 }
 
 .about {
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 200px;
     text-align: center;
-    background-color: white;
+    background-color: #f2f2f2;
 }
 
 .about img {
@@ -163,6 +197,12 @@ nav {
 
 .about p span {
     font-size: 14px;
+}
+
+.about-low {
+    height: 200px;
+    background: url(../img/bg-up.png) no-repeat center top;
+    background-size: cover;
 }
 
 .skill {
@@ -224,7 +264,14 @@ nav {
     font-size: 14px;
 }
 
+.contact-up {
+    height: 200px;
+    background: url(../img/bg-low.png) no-repeat center top;
+    background-size: cover;
+}
+
 .contact {
+    background: #f2f2f2;
     padding-top: 70px;
     padding-bottom: 70px;
     text-align: center;
